# TTI-dataset-tools

./: LICENSE  README.md  environment.yml  pyproject-dev.toml  pyproject-publish.toml  pyproject.toml
data/: 2-lane-wide-Research1v1NavPathModel-2023-09-13-meta.json  4-lane-lc-Research1v1NavPathModel-2023-09-15-meta.json  Research1v1NavPathModel-2023-09-13-meta.json
src/: polygons.json
src/ind_tools/: CrosswalkModel.py  IndTransformer.py  __init__.py
src/notebooks/: Behavior Hypotheses.ipynb  Coordinate-Transformation.ipynb  crosswalk-model-ground-truth.ipynb  crosswalk-model.ipynb  crosswalk-ped.ipynb  init_notebook.py  path-pattern-modeling.ipynb  ped-behavior-analysis.ipynb
src/tools/: ColMapper.py  TrajectoryCleaner.py  TrajectoryProcessor.py  TrajectoryTransformer.py
src/tti_dataset_tools/: ColMapper.py  InfluenceAnalyzer.py  TrajectoryCleaner.py  TrajectoryMetaBuilder.py  TrajectoryProcessor.py  TrajectoryTransformer.py  TrajectoryUtils.py  TrajectoryVisualizer.py  __init__.py
src/tti_dataset_tools/models/: CrosswalkModel.py
src/tti_dataset_tools/patterns/: RegularKnotsModel.py
